# docs/swagger.json
@@ -382,6 +382,96 @@
                 }
             }
         },
+        "/cart/remove/{cartItemId}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Remove Cart Item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "cart item id",
+                        "name": "cartItemId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
+                    }
+                }
+            }
+        },
+        "/cart/set/{cartItemId}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Set Cart Item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "cart item id",
+                        "name": "cartitemid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "cart item object",
+                        "name": "cartitem",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateCartItemRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CartItem"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
+                    }
+                }
+            }
+        },
         "/product/create": {
             "post": {
                 "security": [
@@ -406,7 +496,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Product"
+                            "$ref": "#/definitions/models.CreateProductRequest"
                         }
                     }
                 ],
@@ -787,19 +877,13 @@
                 "id": {
                     "type": "string"
                 },
-                "product_id": {
-                    "type": "string"
-                },
                 "quantity": {
                     "type": "integer"
                 },
-                "sku_name": {
+                "sku_id": {
                     "type": "string"
                 },
                 "updatedAt": {
-                    "type": "string"
-                },
-                "variant_name": {
                     "type": "string"
                 }
             }
@@ -821,17 +905,47 @@
         "models.CreateCartItemRequest": {
             "type": "object",
             "properties": {
-                "product_id": {
-                    "type": "string"
-                },
                 "quantity": {
                     "type": "integer"
                 },
-                "sku_name": {
+                "sku_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateProductRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
                     "type": "string"
                 },
-                "variant_name": {
+                "img": {
                     "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "productOptions": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "name": {
+                                "type": "string"
+                            },
+                            "skus": {
+                                "type": "object",
+                                "properties": {
+                                    "price": {
+                                        "type": "number"
+                                    },
+                                    "quantity": {
+                                        "type": "integer"
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
             }
         },
@@ -877,12 +991,6 @@
         "models.Product": {
             "type": "object",
             "properties": {
-                "cartItems": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.CartItem"
-                    }
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -901,13 +1009,22 @@
                 "name": {
                     "type": "string"
                 },
-                "price": {
-                    "type": "number"
+                "productOptions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ProductOption"
+                    }
                 },
                 "reviews": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Review"
+                    }
+                },
+                "skus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Sku"
                     }
                 },
                 "trackings": {
@@ -918,12 +1035,32 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ProductOption": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
                 },
-                "variants": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Variant"
-                    }
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "sku": {
+                    "$ref": "#/definitions/models.Sku"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
@@ -970,6 +1107,12 @@
         "models.Sku": {
             "type": "object",
             "properties": {
+                "cartItems": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CartItem"
+                    }
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -979,16 +1122,19 @@
                 "id": {
                     "type": "string"
                 },
-                "name": {
+                "price": {
+                    "type": "number"
+                },
+                "product_id": {
+                    "type": "string"
+                },
+                "product_option_id": {
                     "type": "string"
                 },
                 "quantity": {
                     "type": "integer"
                 },
                 "updatedAt": {
-                    "type": "string"
-                },
-                "variant_id": {
                     "type": "string"
                 }
             }
@@ -1019,6 +1165,14 @@
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UpdateCartItemRequest": {
+            "type": "object",
+            "properties": {
+                "quantity": {
+                    "type": "integer"
                 }
             }
         },
@@ -1085,38 +1239,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Tracking"
-                    }
-                },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Variant": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "product_id": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "skus": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Sku"
                     }
                 },
                 "updatedAt": {
