# models/sku.go
@@ -7,10 +7,12 @@ import (
 
 type Sku struct {
 	gorm.Model
-	ID        uuid.UUID `gorm:"type:char(36);primaryKey" json:"id"`
-	VariantID uuid.UUID `                                json:"variant_id"`
-	Name      string    `                                json:"name"`
-	Quantity  uint8     `                                json:"quantity"`
+	ID              uuid.UUID  `gorm:"type:char(36);primaryKey" json:"id"`
+	ProductID       uuid.UUID  `                                json:"product_id"`
+	ProductOptionID uuid.UUID  `                                json:"product_option_id"`
+	Price           float64    `                                json:"price"`
+	Quantity        uint32     `                                json:"quantity"`
+	CartItems       []CartItem `gorm:"foreignKey:SkuID"`
 }
 
 func (sku *Sku) BeforeCreate(tx *gorm.DB) (err error) {
